# Helios

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CUDA_install.json  LICENSE  README.md  VULKAN_BACKEND_PLAN.md  dependencies.sh  flake.nix  helios_dependencies.sh  progress.md
PLY/: king.ply  (+4 more)
core/: CMakeLists.txt  CMake_project.cmake  CMake_project.txt
core/include/: Context.h  doctest_utils.h  exif_writer.h  global.h  helios_vector_types.h  image_metadata.h  pugixml.hpp
core/lib/: detect_GPU_compute.cmake
core/lib/cpplocate/: CMakeLists.txt
core/lib/libjpeg-9a/: CMakeLists.txt  jmorecfg.h  jpeglib.h
core/lib/libpng/: CMakeLists.txt  pngconf.h  pngpriv.h
core/lib/pugixml/: pugiconfig.hpp  pugixml.cpp
core/lib/testdata/: timeseries_compact_date.csv  timeseries_compact_datetime.csv  timeseries_datetime_space.csv  timeseries_ddmmyyyy_hhmm.csv  timeseries_iso8601_offset.csv  timeseries_iso8601_utc.csv  timeseries_mmddyyyy_hhmm.csv  timeseries_nasa_power.csv  timeseries_openmeteo_davis.csv  timeseries_openmeteo_nyc.csv  timeseries_time_column.csv  weather_data.csv
core/lib/zlib/: CMakeLists.txt  gzguts.h  gzlib.c  gzread.c  zconf.h.cmakein  zconf.h.included  zlib.h
core/src/: Context.cpp  Context_data.cpp  Context_fileIO.cpp  Context_object.cpp  Context_primitive.cpp  TestMain.cpp  exif_writer.cpp  global.cpp  pugixml.cpp  selfTest.cpp
core/tests/: TestMain.cpp  Test_OBJ.h  Test_XML.h  Test_context.h  Test_data.h  Test_functions.h  Test_utilities.h  selfTest.cpp
plugins/aeriallidar/: CMakeLists.txt
plugins/aeriallidar/doc/: AerialLiDAR.dox
plugins/aeriallidar/include/: AerialLiDAR.cuh  AerialLiDAR.h  random.h
plugins/aeriallidar/src/: AerialLiDAR.cpp  AerialLiDAR.cu  fileIO.cpp  selfTest.cpp
plugins/aeriallidar/tests/: TestMain.cpp  selfTest.cpp
plugins/aeriallidar/xml/: synthetic_aerial_test.xml
plugins/boundarylayerconductance/: CMakeLists.txt
plugins/boundarylayerconductance/doc/: BLConductance.dox
plugins/boundarylayerconductance/include/: BoundaryLayerConductanceModel.h
plugins/boundarylayerconductance/src/: BoundaryLayerConductanceModel.cpp  selfTest.cpp
plugins/boundarylayerconductance/tests/: TestMain.cpp  selfTest.cpp
plugins/canopygenerator/: CMakeLists.txt
plugins/canopygenerator/doc/: CanopyGenerator.dox  CanopyGenerator.dox~
plugins/canopygenerator/include/: CanopyGenerator.h
plugins/canopygenerator/src/: CanopyGenerator.cpp  bean.cpp  grapevine.cpp  sorghum.cpp  strawberry.cpp  tomato.cpp  walnut.cpp  whitespruce.cpp
plugins/canopygenerator/tests/: TestMain.cpp  selfTest.cpp
plugins/canopygenerator/xml/: grapevine.xml
plugins/collisiondetection/: CMakeLists.txt
plugins/collisiondetection/doc/: CollisionDetection.dox
plugins/collisiondetection/include/: CollisionDetection.h
plugins/collisiondetection/src/: CollisionDetection.cpp  CollisionDetection.cu  CollisionDetection_RayTracing.cpp  CollisionDetection_Slicing.cpp
plugins/collisiondetection/tests/: TestMain.cpp  selfTest.cpp
plugins/energybalance/: CMakeLists.txt
plugins/energybalance/doc/: EnergyBalance.dox
plugins/energybalance/include/: EnergyBalanceModel.h
plugins/energybalance/src/: EnergyBalanceModel.cpp  EnergyBalanceModel.cu  selfTest.cpp
plugins/energybalance/tests/: TestMain.cpp  selfTest.cpp
plugins/guixml/: CMakeLists.txt
plugins/guixml/camera_light_models/: Arrow.mtl  SphereLightSource.mtl
plugins/guixml/doc/: Dummy.dox
plugins/guixml/include/: BuildGeometry.h  InitializeEnergyBalance.h  guixml.h
plugins/guixml/spectral_data/: bark_surface_spectral_library.xml  camera_spectral_library.xml  fruit_surface_spectral_library.xml
plugins/guixml/src/: InitializeEnergyBalance.cpp  InitializeRadiation.cpp  guixml.cpp
plugins/irrigation/: CMakeLists.txt
plugins/irrigation/include/: IrrigationModel.h
plugins/irrigation/src/: IrrigationModel.cpp
plugins/irrigation/tests/: TestMain.cpp  selfTest.cpp
plugins/irrigation/utilities/: plot_irrigation_dxf.py  visualize_network.py
plugins/leafoptics/: CMakeLists.txt
plugins/leafoptics/doc/: LeafOptics.dox
plugins/leafoptics/include/: LeafOptics.h
plugins/leafoptics/spectral_data/: prospect_spectral_library.xml
plugins/leafoptics/src/: LeafOptics.cpp
plugins/leafoptics/tests/: TestMain.cpp  selfTest.cpp
plugins/lidar/: CMakeLists.txt
plugins/lidar/data/: .Rhistory  cylinder_tree_QSM_test.txt  leafcube_multi.xyz  sphere_scan0.xyz  sphere_scan3.xyz
plugins/lidar/doc/: LiDAR.dox
plugins/lidar/include/: AerialLiDAR.h  LiDAR.cuh  LiDAR.h  s_hull_pro.h
plugins/lidar/src/: AerialLiDAR.cpp  LiDAR.cpp  LiDAR.cu  QSM.cpp  fileIO.cpp  selfTest.cpp
plugins/lidar/tests/: TestMain.cpp  selfTest.cpp
plugins/lidar/xml/: AlmondWP.obj.mtl  almond.xml  leafcube_multi.xml  sphere.xml  synthetic_test.xml  synthetic_test_8.xml
plugins/parameteroptimization/: CMakeLists.txt
plugins/parameteroptimization/doc/: ParameterOptimization.dox
plugins/parameteroptimization/include/: ParameterOptimization.h
plugins/parameteroptimization/src/: ParameterOptimization.cpp
plugins/parameteroptimization/tests/: TestMain.cpp  selfTest.cpp
plugins/photosynthesis/: CMakeLists.txt
plugins/photosynthesis/doc/: C4_parameter_discrepancies.md  Photosynthesis.dox
plugins/photosynthesis/include/: PhotosynthesisModel.h
plugins/photosynthesis/src/: PhotosynthesisModel.cpp  selfTest.cpp
plugins/photosynthesis/tests/: C4_test_anchors.csv  TestMain.cpp  selfTest.cpp
plugins/plantarchitecture/: CMakeLists.txt
plugins/plantarchitecture/doc/: CarbohydrateModel.dox  NitrogenModel.dox  PlantArchitecture.dox  schematics.key
plugins/planthydraulics/: CMakeLists.txt
plugins/projectbuilder/: CMakeLists.txt
plugins/radiation/: CMakeLists.txt
plugins/solarposition/: CMakeLists.txt
plugins/stomatalconductance/: CMakeLists.txt
plugins/syntheticannotation/: CMakeLists.txt
plugins/visualizer/: CMakeLists.txt
plugins/voxelintersection/: CMakeLists.txt
plugins/weberpenntree/: CMakeLists.txt
samples/solarposition_selftest/: CMakeLists.txt  main.cpp
(+2432 files in other folders)
